--- a/EmployeePayroll-App/css/style.css
+++ b/EmployeePayroll-App/css/style.css
@@ -125,3 +125,35 @@ select {
     color: #42515f;
     background-color: transparent;
 }
+textarea
+{
+    margin-top: 20px;
+    height:60px
+}
+.button-parent
+{
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    justify-content: space-between;
+}
+.button
+{
+    font: normal normal normal 20px/26px Roboto;
+    letter-spacing: 0px;
+    font-size: 20px;
+    color: #42515F;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    font-weight: 400;
+    min-width: 140px;
+    text-align: center;
+    text-decoration: none;
+    padding: 7px 7px;
+    cursor: pointer;
+}
+.submit-button
+{
+    margin-right: 30px;
+}
