--- a/EmployeePayroll-App/css/style.css
+++ b/EmployeePayroll-App/css/style.css
@@ -131,30 +131,34 @@ textarea
     height:60px
 }
 /*UC 7*/
-.button-parent
-{
+.buttonParent {
     display: flex;
-    margin-top: 30px;
     margin-bottom: 10px;
     justify-content: space-between;
+    margin-top: 20px;
 }
-.button
-{
-    font: normal normal normal 20px/26px Roboto;
-    letter-spacing: 0px;
+
+.button {
     font-size: 20px;
-    color: #42515F;
-    background: #E2E2E2 0% 0% no-repeat padding-box;
-    border: 1px solid #969696;
-    border-radius: 5px;
+    font-family: Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+    background-color: #f5f5f5;
     font-weight: 400;
     min-width: 140px;
-    text-align: center;
-    text-decoration: none;
     padding: 7px 7px;
-    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    cursor: default;
 }
-.submit-button
-{
+
+.submitButton {
+    background-color: #f5f5f5;
     margin-right: 30px;
+}
+
+.cancelButton {
+    text-decoration: none;
+    text-align: center;
 }
